# FFmpegLib

./: .gitignore  CMakeLists.txt  build.gradle  extract_header.sh  getFilePath.sh  nexus_maven.gradle  path.txt
ffmpeg-3.0.8/: build.sh  build_android.sh  build_ffmpeg.sh  config.asm  config.fate  config.h  config.mak  configure
ffmpeg-3.0.8/android/armv7-a-vfp/lib/pkgconfig/: libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc
ffmpeg-3.0.8/doc/: avoptions_format.texi  config.texi  ffmpeg-formats.1  ffmpeg-formats.pod  print_options
ffmpeg-3.0.8/doc/examples/pc-uninstalled/: libavfilter.pc
ffmpeg-3.0.8/libavcodec/: libavcodec.pc  libfdk-aacenc.d  libx264.d
ffmpeg-3.0.8/libavfilter/: f_ebur128.d  vf_blackframe.d  vf_boxblur.d  vf_colormatrix.d  vf_cover_rect.d  vf_cropdetect.d  vf_delogo.d  vf_eq.d  vf_find_rect.d  vf_fspp.d  vf_geq.d  vf_histeq.d  vf_hqdn3d.d  vf_interlace.d  vf_kerndeint.d  vf_mpdecimate.d  vf_nnedi.d  vf_owdenoise.d  vf_perspective.d  vf_phase.d  vf_pp7.d  vf_pullup.d  vf_repeatfields.d  vf_sab.d  vf_smartblur.d  vf_spp.d  vf_stereo3d.d  vf_super2xsai.d  vf_tinterlace.d  vf_uspp.d  vsrc_mptestsrc.d
ffmpeg-3.0.8/libavutil/: ffversion.h
ffmpeg-3.0.8/libswscale/: libswscale.pc
ffmpeg-3.2.5/: config.asm  config.fate  config.mak  jianxi_ffmpeg_android.sh
ffmpeg-3.2.5/doc/: config.texi
ffmpeg-3.2.5/libavcodec/: libavcodec.so.57  libfdk-aacenc.d  libx264.d
ffmpeg-3.2.5/libswscale/: libswscale.so.4
ffmpeg-3.2.5/tests/ref/fate/: sub-aqtitle  sub-ass-to-ass-transcode  sub-cc  sub-cc-realtime  sub-charenc  sub-jacosub  sub-microdvd  sub-movtext  sub-mpl2  sub-mpsub  sub-mpsub-frames  sub-pjs  sub-realtext  sub-sami  sub-sami2  sub-srt  sub-ssa-to-ass-remux  sub-stl  sub-subripenc  sub-subviewer  sub-subviewer1  sub-textenc  sub-vplayer  sub-webvtt  sub-webvtt2
src/main/: AndroidManifest.xml
src/main/cpp/: FFmpegUtil.cpp  Log.c  Log.h
src/main/cpp/cmd/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
src/main/cpp/include/: config.h  x264.h
src/main/cpp/include/libavcodec/: avdct.h  jni.h
src/main/cpp/include/libavutil/: attributes.h
src/main/cpp/libffmpegthumbnailer/: grayscalefilter.h  moviedecoder.cpp  moviedecoder.h  pngwriter.h  videothumbnailer.cpp  videothumbnailer.h
src/main/cpp/video_edit/: Compress.c  Compress.h  Cut.c  Cut.h  Progress.c  Progress.h
src/main/java/com/zuga/ffmpeg/: FFmpegUtil.java
src/main/jni/: Android.mk  Application.mk
